--- a/src/style.css
+++ b/src/style.css
@@ -4,19 +4,19 @@ img
     top: 0px;
     left: 0px;
 }
-#helmet
-{
-    z-index: 10;
-}
-#torso
-{
-    z-index: 20;
-}
-#arms
+#helm
 {
     z-index: 30;
 }
 #arms
 {
     z-index: 40;
+}
+#legs
+{
+    z-index: 10;
+}
+#chest
+{
+    z-index: 20;
 }
