--- a/src/style.css
+++ b/src/style.css
@@ -1,8 +1,28 @@
+.fill {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    overflow: hidden
+}
+#armor{
+    position: relative;
+    justify-content: center;
+    align-items: center;
+    width:640px;
+    height:1024px;
+}
 img
 {
     position:absolute;
-    top: 0px;
-    left: 0px;
+    /*top:0;
+    bottom:0;
+    left:0;
+    right:0;*/
+    top: inherit;
+    left: inherit;
+    max-width:100%;
+    max-height:100%;
+
 }
 #helm
 {
