--- a/ver2/styleChrome.css
+++ b/ver2/styleChrome.css
@@ -56,7 +56,9 @@
 
 }
 .name{
-
+    position:absolute;
+    top:0;
+    left:0;
 }
 .stats{
     position:absolute;
@@ -64,10 +66,14 @@
     left:0;
 }
 .traits{
-
+    position:absolute;
+    top:0;
+    left:0;
 }
 .skills{
-
+    position:absolute;
+    top:0;
+    left:0;
 }
 
 /*depreciated*/
