--- a/ver2/styleChrome.css
+++ b/ver2/styleChrome.css
@@ -1,8 +1,4 @@
-/*.container{
-        background: url("./img/Character_sheet.png") no-repeat;
-        background-size: 100%;
-        background-size:contain;
-}*/
+
 .container-background{
     position:absolute;
     top: inherit;
@@ -25,14 +21,6 @@
     max-width:100%;
     max-height:100%;
 }
-/* img
-{
-    position:absolute;
-    top: inherit;
-    left: inherit;
-    max-width:100%;
-    max-height:100%;
-}*/
 #helm
 {
     z-index: 40;
@@ -55,15 +43,33 @@
     box-shadow: none; /* You may want to include this as bootstrap applies these styles too */
 
 }
-.name{
-    position:absolute;
-    top:0;
-    left:0;
-}
 .stats{
     position:absolute;
-    top:0;
-    left:0;
+    top:0px;
+    left:400px;
+}
+.name{
+    position:relative;
+    margin-left:5%;
+    margin-top:10%;
+    margin-bottom: 20%;
+    /*margin-left:20px;
+    margin-top:20px;
+    margin-bottom: 40px;*/
+}
+.firstStat{
+    position: relative;
+    margin-left:5%;
+    margin-top:0;
+    margin-bottom: 2%;
+}
+.stat{
+    position: relative;
+    margin-left:5%;
+    margin-top:1.5%;
+    margin-bottom: 2%;
+    /*margin-left:20px;
+    margin-top:20px;*/
 }
 .traits{
     position:absolute;
@@ -76,20 +82,4 @@
     left:0;
 }
 
-/*depreciated*/
-/*
-.name{
-    position:absolute;
-    top: 0px;
-    left: 0px;
-}*/
-/*
-.stat1{
-    margin-top:40%;
-    margin-bottom: 40%;
-}
-.stat{
-    margin-top:5%;
-    margin-bottom: 40%;
-}*/
 
