--- a/ver2/style/styleChrome.css
+++ b/ver2/style/styleChrome.css
@@ -28,23 +28,22 @@
     max-width:100%;
     max-height:100%;
 }
-#helm
-{
-    z-index: 40;
-}
-#arms
-{
-    z-index: 50;
-}
 #legs
 {
-    z-index: 20;
+    z-index: 20; /*1.*/
 }
 #chest
 {
-    z-index: 30;
+    z-index: 30; /*2.*/
 }
-
+#helm
+{
+    z-index: 40; /*3.*/
+}
+#arms
+{
+    z-index: 50; /*4.*/
+}
 .form-control {
     border: 0;
     box-shadow: none; /* You may want to include this as bootstrap applies these styles too */
