--- a/ver2/style/styleChrome.css
+++ b/ver2/style/styleChrome.css
@@ -1,3 +1,6 @@
+body{
+    overflow: hidden;
+}
 .center-align{
     margin:0 auto;
     display: block;
@@ -8,8 +11,8 @@
 }
 .container-background{
     position:absolute;
-    top:1%;
-    left: 5%;
+    /*top:1%;
+    left: 5%;*/
     max-width:100%;
     max-height:100%;
     z-index: 0;
@@ -47,7 +50,6 @@
 .form-control {
     border: 0;
     box-shadow: none; /* You may want to include this as bootstrap applies these styles too */
-
 }
 .stats{
     position:absolute;
@@ -78,15 +80,9 @@
     top:55%;
     left:10%;
 }
-trait{
-
-}
 .skills{
     position:absolute;
     top:55%;
     left:50%;
-}
-skill{
-
 }
 
