--- a/ver2/style/styleChrome.css
+++ b/ver2/style/styleChrome.css
@@ -1,9 +1,12 @@
+html { 
+  background: url('../img/logo.png') no-repeat center center fixed; 
+  -webkit-background-size: cover;
+  -moz-background-size: cover;
+  -o-background-size: cover;
+  background-size: cover;
+}
 body{
     overflow: hidden;
-}
-.center-align{
-    margin:0 auto;
-    display: block;
 }
 .paperKnight{
    visibility: hidden;
