--- a/ver2/style/styleChrome.css
+++ b/ver2/style/styleChrome.css
@@ -1,5 +1,5 @@
 html { 
-  background: url('./bin/img/logo.png') no-repeat center center fixed; 
+  background: url('../img/logo.png') no-repeat center center fixed; 
   -webkit-background-size: cover;
   -moz-background-size: cover;
   -o-background-size: cover;
@@ -54,8 +54,9 @@ body{
 }
 .name{
     position:relative;
-    margin-left:10%;
-    margin-top:15%;
+    margin-right: 10%;
+    margin-left: -1%;
+    margin-top:17%;
     margin-bottom: 20%;
 }
 .stats{
@@ -65,21 +66,21 @@ body{
 }
 .firstStat{
     position: relative;
-    /*margin-left:1%;*/
+    margin-left:-1%;
     margin-top:5%;
-    margin-bottom: 2%;
+    margin-bottom: 1.8%;
     
 }
 .stat{
     position: relative;
-    /*margin-left:1%;*/
-    margin-top:5%;
-    margin-bottom: 3%;
+    margin-left:-1%;
+    margin-top:4.2%;
+    margin-bottom: 2%;
 }
 .traits{
     position:absolute;
     top:52%;
-    left:3%;
+    left:3.5%;
 }
 .skills{
     position:absolute;
