--- a/ver2/style/styleChrome.css
+++ b/ver2/style/styleChrome.css
@@ -1,5 +1,5 @@
 html { 
-  background: url('./bin//img/logo.png') no-repeat center center fixed; 
+  background: url('./bin/img/logo.png') no-repeat center center fixed; 
   -webkit-background-size: cover;
   -moz-background-size: cover;
   -o-background-size: cover;
